--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProductList">
 
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/searchBar"
+        android:layout_alignParentTop="true"
+        app:mt_hint="Digite seu produto"
+        >
+
+
+    </com.mancj.materialsearchbar.MaterialSearchBar>
+
     <android.support.v7.widget.RecyclerView
+        android:layout_below="@id/searchBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_product"
@@ -15,4 +27,4 @@
         />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
