--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
             android:layout_width="200dp"
             android:layout_height="200dp" />
 
-        <TextView
-            android:gravity="center"
-            android:id="@+id/txtSlogan"
-            android:text="@string/slogan"
-            android:textColor="@android:color/white"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
+        <!--<TextView-->
+            <!--android:gravity="center"-->
+            <!--android:id="@+id/txtSlogan"-->
+            <!--android:text="Slogan"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:layout_width="200dp"-->
+            <!--android:layout_height="wrap_content" />-->
 
     </LinearLayout>
     
